examples/test/testpolicy15958.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15958
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key34: value4
      key8: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value37
          key26: value23
          key7: value9
      podSelector:
        matchLabels:
          key34: value0
          key39: value47
